tests/neg/cannot-reduce-inline-match.check
-- Error: tests/neg/cannot-reduce-inline-match.scala:3:13 --------------------------------------------------------------
9 |  foo("f") // error
  |  ^^^^^^^^
  |  cannot reduce inline match with
  |   scrutinee:  {
  |    "f"
  |  } : String("f")
  |   patterns :  case _:Int
  | This location is in code that was inlined at cannot-reduce-inline-match.scala:3
